vlib/v/checker/tests/unexpected_or_propagate.out
vlib/v/checker/tests/unexpected_or_propagate.vv:6:17: error: unexpected `?`, the function `ret_zero` does not return an Option
    4 | 
    5 | fn opt_fn() ?int {
    6 |     a := ret_zero()?
      |                    ^
    7 |     return a
    8 | }
